<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>klj</groupId>
    <artifactId>KljSfPlanner</artifactId>
    <version>0.5</version>

    <properties>
        <package.filename>sf-planner</package.filename>
        <package.modulename>kljsfplanner</package.modulename>
        <package.mainclass>ui.SportfeestPlannerGUI</package.mainclass>
        <package.year>2025</package.year>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yyMMddHHmm</maven.build.timestamp.format>
        <javafx.version>21.0.7</javafx.version>
        <java.version>21</java.version>
    </properties>

    <dependencies>
        <!-- heuristics solver -->
        <dependency>
            <groupId>org.optaplanner</groupId>
            <artifactId>optaplanner-core</artifactId>
            <version>9.44.0.Final</version>
            <exclusions>
                <exclusion>
                    <groupId>org.optaplanner</groupId>
                    <artifactId>optaplanner-constraint-drl</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.optaplanner</groupId>
                    <artifactId>optaplanner-constraint-streams-drools</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- logging -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.18</version>
        </dependency>
        <!-- Brug van Log4j naar SLF4J -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-to-slf4j</artifactId>
            <version>2.20.0</version>
        </dependency>
        <!-- Excel marshalling -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.4.0</version>
        </dependency>
        <!-- variable injection for wizard -->
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>7.0.0</version>
        </dependency>
        <!-- JavaFX -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <!-- JavaFX extra controls -->
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.2.2</version>
        </dependency>
        <!-- JavaFX log -->
        <dependency>
            <groupId>org.fxmisc.richtext</groupId>
            <artifactId>richtextfx</artifactId>
            <version>0.11.5</version>
        </dependency>
        <!-- XML marshalling -->
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <version>4.0.5</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>**/*.ico</exclude>
                    <exclude>**/*.bat</exclude>
                    <exclude>**/*.sh</exclude>
                </excludes>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <excludes>
                        <exclude>**/data/*</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeScope>compile</includeScope>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <stripVersion>true</stripVersion>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>${package.mainclass}</mainClass>
                            <packageName>${package.modulename}</packageName>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                        </manifest>
                    </archive>
                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
                    <excludes>
                        <exclude>**/data/*</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/build/${package.filename}/data</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${basedir}/data</directory>
                                    <filtering>false</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                    <execution>
                        <id>copy-helpers</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/main/resources</directory>
                                    <includes>
                                        <include>**/*.bat</include>
                                        <include>**/*.sh</include>
                                    </includes>
                                    <filtering>true</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <shadedArtifactAttached>false</shadedArtifactAttached>
                            <outputFile>${project.build.directory}/shaded/${package.filename}-${project.version}.jar
                            </outputFile>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${package.mainclass}</mainClass>
                                </transformer>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.igormaznitsa</groupId>
                <artifactId>mvn-jlink-wrapper</artifactId>
                <version>1.2.4</version>
                <executions>
                    <execution>
                        <id>call-jdeps</id>
                        <goals>
                            <goal>jdeps</goal>
                        </goals>
                        <configuration>
                            <output>target${file.separator}jdeps.out</output>
                            <options>
                                <option>--multi-release</option>
                                <option>${java.version}</option>
                                <option>--ignore-missing-deps</option>
                                <option>--recursive</option>
                                <option>
                                    ${project.build.directory}${file.separator}shaded${file.separator}${package.filename}-${project.version}.jar
                                </option>
                            </options>
                        </configuration>
                    </execution>
                    <execution>
                        <id>call-jlink</id>
                        <goals>
                            <goal>jlink</goal>
                        </goals>
                        <configuration>
                            <modulePaths>
                                <path>${project.build.directory}/lib</path>
                                <path>${project.basedir}/javafx-jmods-21.0.7</path>
                            </modulePaths>
                            <jdepsReportPath>${project.build.directory}${file.separator}jdeps.out</jdepsReportPath>
                            <output>${project.build.directory}${file.separator}java</output>
                            <options>
                                <option>--no-header-files</option>
                                <option>--no-man-pages</option>
                                <option>--strip-debug</option>
                                <option>--add-modules</option>
                                <option>javafx.fxml,javafx.controls,javafx.graphics,javafx.base</option>
                            </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>package-exe</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${java.home}/bin/jpackage</executable>
                            <arguments>
                                <argument>--dest</argument>
                                <argument>${project.build.directory}/build</argument>
                                <argument>--input</argument>
                                <argument>${project.build.directory}/shaded</argument>
                                <argument>--name</argument>
                                <argument>${package.filename}</argument>
                                <argument>--main-jar</argument>
                                <argument>${package.filename}-${project.version}.jar</argument>
                                <argument>--main-class</argument>
                                <argument>${package.mainclass}</argument>
                                <argument>--type</argument>
                                <argument>app-image</argument>
                                <argument>--icon</argument>
                                <argument>${project.basedir}/src/main/resources/icon.ico</argument>
                                <argument>--runtime-image</argument>
                                <argument>${project.build.directory}/java</argument>
                                <argument>--vendor</argument>
                                <argument>KLJ</argument>
                                <argument>--copyright</argument>
                                <argument>Copyright ${package.year} KLJ</argument>
                                <argument>--app-version</argument>
                                <argument>${project.version}</argument>
                                <argument>--description</argument>
                                <argument>${project.name}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <finalName>${package.filename}-${project.version}</finalName>
                            <appendAssemblyId>false</appendAssemblyId>
                            <descriptors>
                                <descriptor>zip.xml</descriptor>
                            </descriptors>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>